--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/babel__standalone": "^7.1.9",
@@ -32,9 +34,7 @@
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "tailwindcss": "^3.3.3"
   },
   "engines": {
     "node": "18.x",
