--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Interactive AI storytelling adventure game powered by Groq",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "server": "cd server && npm run dev",
     "dev:full": "concurrently \"npm run dev\" \"npm run server\"",
