--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
     "lucide-react": "^0.544.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^8.2.2",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "concurrently": "^8.2.2"
   },
   "engines": {
     "node": "18.x",
