--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "build:all": "cd server && npm install && cd .. && npm install && npm run build"
   },
   "dependencies": {
+    "@amitkhare/indexed-storage": "^1.2.0",
     "@babel/standalone": "^7.28.3",
     "@supabase/supabase-js": "^2.38.0",
-    "@types/socket.io-client": "^1.4.36",
     "@types/babel__standalone": "^7.1.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "lucide-react": "^0.544.0",
