--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
